<resources>
    <string name="app_name">Green   Connect</string>
    <string name="title_home">Green     Connect     Home</string>
    <string name="title_chat">Green Connect     Chat</string>
    <string name="title_market">Green   Connect     Market  Place</string>
    <string name="title_news">Green     Connect     News</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_empow">Let\'s empower sustainable agriculture with green connectivity, growing smart and living green.</string>
    <string name="welcome_bac">Welcome back!</string>
    <string name="log_in_to_y">Log In to your account</string>
    <string name="forgotten_p">Forgotten password?</string>
    <string name="or">or</string>
    <string name="log_in_with">Log in with your Google account</string>
    <string name="dont_t_have">Don\'t have an account? Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_for">Sign up for the Green connect app</string>
    <string name="your_sign_u">Your account created successfully!</string>
    <string name="continue_to">Continue to LogIn</string>
    <string name="green_conne">Green Connect</string>
    <string name="welcome_l_e">Welcome  L.E.G.Balasooriya</string>
    <string name="weather_con">Weather Condition</string>
    <string name="jan">25 Jan</string>
    <string name="kaduwela">Kaduwela</string>
    <string name="oc_23_oc">22 oc / 23 oc</string>
    <string name="clear_sky">clear sky</string>
    <string name="oc">23 oc</string>
    <string name="agri_ai_sma">Agri smart support</string>
    <string name="chat">Chat</string>
    <string name="market_plac">Market Place</string>
    <string name="agri_ai_new">Agri News</string>
    <string name="green_news">Agri News</string>
    <string name="green_chat">Agri Chat</string>
    <string name="hi_l_e_g_ba">Hi L.E.G.Balasooriya , welcome to Green Connect ! How can I help you today?</string>
    <string name="type_your_q">Type your question here..........................</string>
    <string name="set_locatio">Set Location</string>
    <string name="enukagayash">enukagayashan123@gmail.com</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="some_id">0</string>
    <string name="total_chat">Total Chat</string>
    <string name="market_place">Market Place</string>
    <string name="total_amoun">Total Amount</string>
    <string name="total_peopl">Total People</string>
    <string name="recent_conv">Recent Conversation (15d)</string>
    <string name="green_market">Market Place</string>
    <string name="what_you_ar">What you are Growing Today will Help You Tomorrow</string>
    <string name="oder_now">Oder Now</string>
    <string name="specl_offer">SPECIAL OFFER</string>
    <string name="farm_inform">Farm Information</string>
    <string name="farm_name">Farm Name</string>
    <string name="num">+ 94</string>
    <string name="phone_numbe">Phone number</string>
    <string name="change_emai">Change Email</string>
    <string name="set_location">Set Location</string>
    <string name="email_addre">Email Address</string>
    <string name="farm_detail">Farm Details</string>
    <string name="farm_size">Farm Size</string>
    <string name="soil_type">Soil Type</string>
    <string name="save">Save</string>
    <string name="cancle">Cancel</string>
    <string name="c">c</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="no_news_available">No news available</string>
    <string name="add_news">Add news</string>
</resources>