<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,ImageContrastCheck,MissingConstraints" />

    <TextView
        android:id="@+id/welcome_l_e"
        android:layout_width="265dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/welcome_l_e"
        android:textAppearance="@style/welcome_l_e"
        android:textSize="18sp"
        android:translationY="-0.16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/weather_con"
        android:layout_width="177dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/weather_con"
        android:textAppearance="@style/weather_con"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="382dp"
        android:layout_height="133dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="103dp"
        android:layout_height="132dp"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/jan"
        android:layout_width="71dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="96dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/jan"
        android:textAppearance="@style/jan"
        android:translationY="-1.8sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/kaduwela"
        android:layout_width="81.25dp"
        android:layout_height="30.69dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="57dp"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/kaduwela"
        android:textAppearance="@style/kaduwela"
        android:translationY="-0.62sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/oc_23_oc"
        android:layout_width="78.09dp"
        android:layout_height="19.18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="29dp"
        android:gravity="top"
        android:lineSpacingExtra="6sp"
        android:text="@string/oc_23_oc"
        android:textAppearance="@style/oc_23_oc"
        android:translationY="-2.97sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/clear_sky"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="74dp"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/clear_sky"
        android:textAppearance="@style/clear_sky"
        android:translationY="-0.62sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/oc"
        android:layout_width="77.03dp"
        android:layout_height="33.25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="31dp"
        android:gravity="top"
        android:lineSpacingExtra="-13sp"
        android:text="@string/oc"
        android:textAppearance="@style/oc"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3" />

    <TextView
        android:id="@+id/agri_ai_sma"
        android:layout_width="185dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/agri_ai_sma"
        android:textAppearance="@style/agri_ai_sma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <View
        android:id="@+id/rectangle_13"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <View
        android:id="@+id/rectangle_14"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <View
        android:id="@+id/rectangle_15"
        android:layout_width="93dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rectangle_15"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_6"
        app:layout_constraintStart_toStartOf="@+id/rectangle_6"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6" />

    <View
        android:id="@+id/rectangle_16"
        android:layout_width="93dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rectangle_16"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_14"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_14"
        app:layout_constraintTop_toTopOf="@+id/rectangle_14"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/rectangle_17"
        android:layout_width="93dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle_17"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_13"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_13"
        app:layout_constraintStart_toStartOf="@+id/rectangle_13"
        app:layout_constraintTop_toTopOf="@+id/rectangle_13" />

    <TextView
        android:id="@+id/chat"
        android:layout_width="37.66dp"
        android:layout_height="21.26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="13dp"
        android:gravity="top"
        android:text="@string/chat"
        android:textAppearance="@style/chat"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_6"
        app:layout_constraintStart_toStartOf="@+id/rectangle_6"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6" />

    <TextView
        android:id="@+id/market_plac"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="top"
        android:text="@string/market_plac"
        android:textAppearance="@style/market_plac"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_14"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_14"
        app:layout_constraintStart_toStartOf="@+id/rectangle_14"
        app:layout_constraintTop_toTopOf="@+id/rectangle_14" />

    <TextView
        android:id="@+id/agri_ai_new"
        android:layout_width="99dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="13dp"
        android:gravity="top"
        android:text="@string/agri_ai_new"
        android:textAppearance="@style/agri_ai_new"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_13"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_13"
        app:layout_constraintStart_toStartOf="@+id/rectangle_13"
        app:layout_constraintTop_toTopOf="@+id/rectangle_13" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_15"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_15"
        app:layout_constraintStart_toStartOf="@+id/rectangle_15"
        app:layout_constraintTop_toTopOf="@+id/rectangle_15"
        app:srcCompat="@drawable/chat" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_16"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_16"
        app:layout_constraintStart_toStartOf="@+id/rectangle_16"
        app:layout_constraintTop_toTopOf="@+id/rectangle_16"
        app:srcCompat="@drawable/market" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/rectangle_14"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:srcCompat="@drawable/cycle" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
        app:layout_constraintStart_toStartOf="@+id/rectangle_17"
        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
        app:srcCompat="@drawable/earth2" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="52dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/news" />


</androidx.constraintlayout.widget.ConstraintLayout>